initailize amin dashboard

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -97,3 +97,13 @@
 .logut-btn{
   cursor: pointer;
 }
+
+/*****Admin******/
+
+.link-active {
+  color: #4b70e2;
+}
+
+.link-inactive {
+  color: rgb(97, 97, 97);
+}
